# trainee_setup_scripts

./: CMakeLists.txt  README.md  package.xml
can/: can0up.service  setup.sh
ether_lidar/: setup.sh
hotspot/scripts/: hotspot.sh  install.sh
hotspot/service/: hotspot.service
network_routing_eth_to_wlan/: setup.bash
ros2_kill_all/: ros2_kill_all.sh
time_synchronization/: setup_pc.sh  setup_raspi.sh
