<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trainee_setup_scripts</name>
  <version>0.0.0</version>
  <description>The trainee_setup_scripts package</description>
  <maintainer email="beike315@icloud.com">Tatsuhiro Ikebe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
